# near-sdk-rs

examples/non-fungible-token/nft/: index.wit  witgen.wit
examples/non-fungible-token/nft/res/: index.ts
examples/status-message/: build.sh  index.wit  witgen.wit
examples/status-message/res/: index.ts  witgen.ts
near-contract-standards/src/fungible_token/: metadata.rs
near-contract-standards/src/non_fungible_token/: macros.rs
near-contract-standards/src/storage_management/: mod.rs
near-contract-standards/src/upgrade/: mod.rs
near-sdk/: Cargo.toml
near-sdk-macros/: Cargo.toml
near-sdk-macros/src/: lib.rs
near-sdk-macros/src/core_impl/code_generator/: ext.rs  impl_item_method_info.rs  item_impl_info.rs
near-sdk-macros/src/core_impl/info_extractor/: impl_item_method_info.rs  item_impl_info.rs
near-sdk-macros/src/core_impl/metadata/: metadata_visitor.rs
near-sdk/src/: lib.rs
near-sdk/src/json_types/: integers.rs  vector.rs
near-sdk/src/types/: account_id.rs  gas.rs  mod.rs  primitives.rs  public_key.rs
