[package]
name = "near-sdk-macros"
version = "4.0.0-pre.7"
authors = ["Near Inc <max@nearprotocol.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/near/near-sdk-rs"
homepage = "https://near-sdk.io"
description = """
Main macro of the library for writing NEAR smart contracts.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1", features = ["full", "fold", "extra-traits", "visit"] }
quote = "1.0"
Inflector = { version = "0.11.4", default-features = false, features = [] }
# witgen_macro_helper = { path = "../../witgen/crates/witgen_macro_helper"}
witgen_macro_helper = {git = "https://github.com/ahalabs/witgen", rev = "1aca670c8c4589a214a7e9e1e79bd9a89001870e"}
