[package]
name = "near-sdk-macros"
version = "4.0.0-pre.7"
authors = ["Near Inc <max@nearprotocol.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/near/near-sdk-rs"
homepage = "https://near-sdk.io"
description = """
Main macro of the library for writing NEAR smart contracts.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1", features = ["full", "fold", "extra-traits", "visit"] }
quote = "1.0"
Inflector = { version = "0.11.4", default-features = false, features = [] }
# witgen_macro_helper = { path = "../../witgen/crates/witgen_macro_helper"}
witgen_macro_helper = {git = "https://github.com/bnjjj/witgen", rev = "cfe9ed4063c6ec79f2af12b7354afaa97b5a6e33"}
